Grace/tests/gibbs/errors/t050.grace
// ERROR = P1031
method foo(a, {
    print(a)
}
